dist_man1_MANS=

if BUILD_BGEOD
  dist_man1_MANS+=bgeod.1
endif

if ENABLE_QT
  dist_man1_MANS+=bgeo-qt.1
endif

if BUILD_BGEO_CLI
  dist_man1_MANS+=bgeo-cli.1
endif

if BUILD_BGEO_TX
  dist_man1_MANS+=bgeo-tx.1
endif

if BUILD_BGEO_UTIL
  dist_man1_MANS+=bgeo-util.1
endif

if ENABLE_WALLET
if BUILD_BGEO_WALLET
  dist_man1_MANS+=bgeo-wallet.1
endif
endif
